[tool.poetry]
name = "letloop.py"
version = "0.1.6"
description = "A cloud for the parenthetical leaning doers"
authors = ["Amir <amirouche@hyper.dev>"]
packages = [
    { include = "letloopit.py" },
]
extras = {}
homepage = "https://github.com/letloop/letloop.cloud/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
'letloop.py' = 'letloopit:main'